--- a/integradora/resourses/orden.html
+++ b/integradora/resourses/orden.html
@@ -126,7 +126,7 @@ let allOrdenes = []; // Para almacenar todas las órdenes originales
 function fetchOrdenes() {
 
 
-    fetch('http://localhost:5000/ViewOrden')
+    fetch('https://latosca.up.railway.app/ViewOrden')
     .then(response => response.json())
     .then(ordenes => {
         console.log("Órdenes recibidas del servidor:", ordenes); // Verificar los datos recibidos
@@ -321,7 +321,7 @@ function cargarDatosUsuarioYRol() {
                 });
             }
         })
-        .then(() => fetch('http://localhost:5000/api/rol', { credentials: 'include' }))
+        .then(() => fetch('https://latosca.up.railway.app/api/rol', { credentials: 'include' }))
         .then(response => response.json())
         .then(data => {
             userRole = data.rol;
@@ -346,7 +346,7 @@ function actualizarEstatusO(estatusN, id) {
     }
 
     // URL del endpoint
-    const url = `http://localhost:5000/orden/estatus/${id}`;
+    const url = `https://latosca.up.railway.app/orden/estatus/${id}`;
 
     // Opciones de la solicitud
     const opciones = {
